test/libsolidity/syntaxTests/nameAndTypeResolution/030_redeclare_implemented_abstract_function_as_abstract.sol
contract base { function foo(); }
contract derived is base { function foo() public {} }
contract wrong is derived { function foo(); }
// ----
// TypeError: (116-131): Redeclaring an already implemented function as abstract
